# deepresearch

./: .env.example  .gitignore  README.md  example_usage.py  langgraph.json  pyproject.toml  studio_instructions.md
src/: __init__.py  graph.py  state.py
src/agents/: research_agent.py  supervisor.py
src/nodes/: clarify.py  generate_brief.py  write_report.py
src/tools/: tavily_search.py
